<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAlreadyRead"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btnAlreadyRead"
        android:fontFamily="@font/lemon"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCurrentlyReading"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="115dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/siya_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imageLibrary"/>

    <TextView
        android:id="@+id/textViewMyLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lemon"
        android:text="@string/textViewMyLibrary"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnSeeAllBooks"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btnSeeAllBooks"
        android:textAllCaps="false"
        android:fontFamily="@font/lemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyLibrary" />

    <Button
        android:id="@+id/btnCurrentlyReading"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btnCurrentlyReading"
        android:textAllCaps="false"
        android:fontFamily="@font/lemon"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeAllBooks" />

    <Button
        android:id="@+id/btnWishList"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btnWishList"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/lemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlreadyRead" />

    <Button
        android:id="@+id/btnMyFavorites"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btnMyFavorites"
        android:textAllCaps="false"
        android:fontFamily="@font/lemon"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWishList" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btnAbout"
        android:textAllCaps="true"
        android:fontFamily="@font/lemon"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMyFavorites" />

    <include
        layout="@layout/trademark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>